// Copyright 2021-2022 the Kubeapps contributors.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package kubeappsapis.core.plugins.v1alpha1;
option go_package = "github.com/vmware-tanzu/kubeapps/cmd/kubeapps-apis/gen/core/plugins/v1alpha1";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// The Core API service provides generic functionality shared across all
// plugins, such as querying for enabled plugins (which can be used as a
// liveness check). There may be other general functionality for use by all
// plugins in the future such as checking authz to the k8s api server using
// the callers token.

service PluginsService {
  // GetConfiguredPlugins returns a map of short and longnames for the configured plugins.
  rpc GetConfiguredPlugins(GetConfiguredPluginsRequest) returns (GetConfiguredPluginsResponse) {
    option (google.api.http) = {
      get: "/core/plugins/v1alpha1/configured-plugins"
    };
  }
}

// Standard request and response messages for each required function are defined below

// GetConfiguredPluginsRequest
//
// Request for GetConfiguredPlugins
message GetConfiguredPluginsRequest {}

// GetConfiguredPluginsResponse
//
// Response for GetConfiguredPlugins
message GetConfiguredPluginsResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: '{"plugins": [{"name": "kapp_controller.packages", "version": "v1alpha1"}]}'
  };

  // Plugins
  //
  // List of Plugin
  repeated Plugin plugins = 1;
}

// Plugin
//
// A plugin can implement multiple services and multiple versions of a service.
message Plugin {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: '{"name": "kapp_controller.packages", "version": "v1alpha1"}'
  };

  // Plugin name
  //
  // The name of the plugin, such as `fluxv2.packages` or `kapp_controller.packages`.
  string name = 1;

  // Plugin version
  //
  // The version of the plugin, such as v1alpha1
  string version = 2;
}
